[package]
name = "yde-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rayon = "1.11.0"
freedesktop_entry_parser = "2.0.1"
fuzzy-matcher = "0.3.7"
shell-words = "1.1.0"
gpui = "0.2.2"
gpui-component = "0.3.1"
env_logger = "0.11.8"
log = "0.4.28"
freedesktop-icons = "0.4.0"
linicon-theme = "1.2.0"
